--- a/src/main/java/com/qa/config/config.properties
+++ b/src/main/java/com/qa/config/config.properties
@@ -1,5 +1,5 @@
 url = https://ezcontent.srijan.net/user/login
-username = editor@srijan.net
+username = editor@example.com
 password = editor@123
 
 browser = chrome
